<resources>
    <string name="app_name">Rick And Morty App</string>
    <string name="logo_of_the_show">Logo of the Rick And Morty</string>
    <string name="first_time_boolean_key">check-if-first-time</string>
    <string name="welcome_text">Welcome!</string>
    <string name="hello_text">Hello!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_character_photo">photo of a character</string>
    <string name="no_residents_found">No residents found!</string>
    <string name="gender_of_a_character">gender of a character</string>
    <string name="back_to_previous_page">back to previous page</string>
    <string name="status">Status:</string>
    <string name="specy">Specy:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episodes">Episodes:</string>
    <string name="created_at_in_api">Created at (in API):</string>
</resources>